# category-api/src/main/java/cryss/dev/category_api/application/adapters/controller/BookController.java
@@ -1,10 +1,12 @@
 package cryss.dev.category_api.application.adapters.controller;
 
-import cryss.dev.category_api.domain.book.ServiceBook;
+import cryss.dev.category_api.domain.book.ListAllAvaiableBooksUseCase;
+import cryss.dev.category_api.domain.book.CreateBookUseCase;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import org.openapitools.api.BooksApi;
 import org.openapitools.model.BookResponse;
+import org.openapitools.model.ListAvaiableBooksResponse;
 import org.openapitools.model.NewBook;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
@@ -18,11 +20,18 @@ import org.springframework.web.bind.annotation.RestController;
 @Validated
 public class BookController implements BooksApi {
 
-    private final ServiceBook service;
+    private final CreateBookUseCase createBookUseCase;
+    private final ListAllAvaiableBooksUseCase listAllAvaiableBooksUseCase;
+
 
     @Override
     public ResponseEntity<BookResponse> createNewBook(NewBook newBook) {
-        return ResponseEntity.ok (service.create(newBook));
+        return ResponseEntity.ok (createBookUseCase.create(newBook));
+    }
+
+    @Override
+    public ResponseEntity<ListAvaiableBooksResponse> listAllBooks() {
+        return  ResponseEntity.ok (listAllAvaiableBooksUseCase.listAllBooks ());
     }
 }
 
