# category-api/src/main/java/cryss/dev/category_api/domain/book/ListAllAvaiableBooksUseCase.java
@@ -1,0 +1,7 @@
+package cryss.dev.category_api.domain.book;
+
+import org.openapitools.model.ListAvaiableBooksResponse;
+
+public interface ListAllAvaiableBooksUseCase {
+    public ListAvaiableBooksResponse listAllBooks();
+}
